--- a/src/GUIs/gameplayWindow.form
+++ b/src/GUIs/gameplayWindow.form
@@ -1,48 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUIs.gameplayWindow">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="593" height="400"/>
+      <xy x="20" y="92" width="1080" height="720"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="1080" height="720"/>
+      <preferredSize width="1080" height="720"/>
+    </properties>
     <border type="none"/>
     <children>
-      <grid id="e95a1" layout-manager="BorderLayout" hgap="0" vgap="0">
+      <grid id="e95a1" binding="pnlLocation" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="1.0" weighty="0.0"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="182f4" class="javax.swing.JLabel" binding="lblLocation">
-            <constraints border-constraint="North"/>
+          <component id="6536c" class="javax.swing.JLabel" binding="lblLocation">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="4" use-parent-layout="false"/>
+            </constraints>
             <properties>
-              <text value="(Location)"/>
+              <text value="(location)"/>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="2f7e9" class="javax.swing.JTextPane" binding="txtGameLog">
+      <grid id="1414f" binding="pnlMobs" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none" title=""/>
+        <children>
+          <component id="3db9" class="javax.swing.JLabel" binding="lblMob1">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(mob1)"/>
+            </properties>
+          </component>
+          <component id="8dd33" class="javax.swing.JLabel" binding="lblMob2">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(mob3)"/>
+            </properties>
+          </component>
+          <component id="e3545" class="javax.swing.JLabel" binding="pnlMob3">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(mob2)"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="36bad" binding="pnlConsumables" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="600" height="200"/>
           </grid>
-          <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
-        <properties>
-          <text value="1600 You woke up in a forest."/>
-        </properties>
-      </component>
-      <component id="15093" class="javax.swing.JButton" binding="button1" default-binding="true">
+        <properties/>
+        <border type="none" title=""/>
+        <children>
+          <component id="bd30a" class="javax.swing.JButton" binding="btnConsum1">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="8407f" class="javax.swing.JButton" binding="btnConsum2">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="5bf5" class="javax.swing.JButton" binding="btnConsum3">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="47bcd" class="javax.swing.JButton" binding="btnConsum4">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="55fad" binding="pnlEquipments" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="124" height="124"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <opaque value="true"/>
+          <preferredSize width="320" height="320"/>
         </properties>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="d75d5" class="javax.swing.JButton" binding="btnMainWeapon">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="bffb8" class="javax.swing.JButton" binding="btnMisc">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="40e19" class="javax.swing.JButton" binding="btnHead">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="9f7f1" class="javax.swing.JButton" binding="btnBody">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="81aca" binding="pnlGameLog" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true">
+            <preferred-size width="100" height="400"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="582f0" class="javax.swing.JTextPane" binding="txtGameLog">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
