--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUIs.gameplayWindow">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUIs.GameWindow">
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="92" width="1080" height="720"/>
+      <xy x="20" y="92" width="1080" height="480"/>
     </constraints>
     <properties>
-      <minimumSize width="1080" height="720"/>
-      <preferredSize width="1080" height="720"/>
+      <minimumSize width="1080" height="480"/>
+      <preferredSize width="1080" height="480"/>
     </properties>
     <border type="none"/>
     <children>
@@ -63,55 +63,10 @@
           </component>
         </children>
       </grid>
-      <grid id="36bad" binding="pnlConsumables" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false">
-            <minimum-size width="420" height="200"/>
-            <preferred-size width="420" height="200"/>
-          </grid>
-        </constraints>
-        <properties/>
-        <border type="none" title=""/>
-        <children>
-          <component id="bd30a" class="javax.swing.JButton" binding="btnConsum1">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="(empty)"/>
-            </properties>
-          </component>
-          <component id="8407f" class="javax.swing.JButton" binding="btnConsum2">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="(empty)"/>
-            </properties>
-          </component>
-          <component id="5bf5" class="javax.swing.JButton" binding="btnConsum3">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="(empty)"/>
-            </properties>
-          </component>
-          <component id="47bcd" class="javax.swing.JButton" binding="btnConsum4">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="(empty)"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
       <grid id="55fad" binding="pnlEquipments" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="2" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="124" height="124"/>
           </grid>
         </constraints>
@@ -172,6 +127,51 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+        </children>
+      </grid>
+      <grid id="36bad" binding="pnlConsumables" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <minimum-size width="420" height="200"/>
+            <preferred-size width="420" height="200"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none" title=""/>
+        <children>
+          <component id="bd30a" class="javax.swing.JButton" binding="btnConsum1">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="8407f" class="javax.swing.JButton" binding="btnConsum2">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="5bf5" class="javax.swing.JButton" binding="btnConsum3">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="47bcd" class="javax.swing.JButton" binding="btnConsum4">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(empty)"/>
+            </properties>
           </component>
         </children>
       </grid>
