--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -25,6 +25,7 @@
             </constraints>
             <properties>
               <borderPainted value="false"/>
+              <horizontalAlignment value="4"/>
               <text value="(location)"/>
             </properties>
           </component>
@@ -33,24 +34,28 @@
       <grid id="81aca" binding="pnlGameLog" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="400"/>
           </grid>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="2ee51" class="javax.swing.JTextField" binding="txtGameLog">
+          <component id="fe6c1" class="javax.swing.JTextArea" binding="txtGameLog">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <focusable value="false"/>
+              <font name="JetBrains Mono" size="14" style="1"/>
+            </properties>
           </component>
         </children>
       </grid>
-      <grid id="1414f" binding="pnlMobs" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1414f" binding="pnlMobs" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -60,7 +65,7 @@
         <children>
           <component id="84075" class="javax.swing.JButton" binding="btnMob1">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <borderPainted value="false"/>
@@ -69,7 +74,7 @@
           </component>
           <component id="9b04b" class="javax.swing.JButton" binding="btnMob2">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <borderPainted value="false"/>
@@ -78,11 +83,35 @@
           </component>
           <component id="f1017" class="javax.swing.JButton" binding="btnMob3">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <borderPainted value="false"/>
               <text value="(empty)"/>
+            </properties>
+          </component>
+          <component id="528df" class="javax.swing.JLabel" binding="lblMob2Hp">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(0/0)"/>
+            </properties>
+          </component>
+          <component id="ccab7" class="javax.swing.JLabel" binding="lblMob1Hp">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(0/0)"/>
+            </properties>
+          </component>
+          <component id="23cae" class="javax.swing.JLabel" binding="lblMob3Hp">
+            <constraints>
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="(0/0)"/>
             </properties>
           </component>
         </children>
@@ -95,7 +124,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="87b9e" binding="pnlHpBar" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="87b9e" binding="pnlHpBar" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -105,20 +134,12 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="296ad" class="javax.swing.JLabel" binding="lblHpIcon">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Label"/>
-                </properties>
-              </component>
               <component id="99ae5" class="javax.swing.JLabel" binding="lblHpValue">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="(100/100)"/>
                 </properties>
               </component>
             </children>
@@ -134,7 +155,7 @@
             <properties/>
             <border type="none" title=""/>
             <children>
-              <component id="bd30a" class="javax.swing.JButton" binding="btnConsum1">
+              <component id="bd30a" class="javax.swing.JButton" binding="btnInv1">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -142,7 +163,7 @@
                   <text value="(empty)"/>
                 </properties>
               </component>
-              <component id="8407f" class="javax.swing.JButton" binding="btnConsum2">
+              <component id="8407f" class="javax.swing.JButton" binding="btnInv2">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -150,7 +171,7 @@
                   <text value="(empty)"/>
                 </properties>
               </component>
-              <component id="5bf5" class="javax.swing.JButton" binding="btnConsum3">
+              <component id="5bf5" class="javax.swing.JButton" binding="btnInv3">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -158,7 +179,7 @@
                   <text value="(empty)"/>
                 </properties>
               </component>
-              <component id="47bcd" class="javax.swing.JButton" binding="btnConsum4">
+              <component id="47bcd" class="javax.swing.JButton" binding="btnInv4">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -216,6 +237,14 @@
             </children>
           </grid>
         </children>
+      </grid>
+      <grid id="62695" binding="pnlLoots" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
       </grid>
     </children>
   </grid>
