--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -66,7 +66,7 @@
         <children>
           <component id="fe6c1" class="javax.swing.JTextArea" binding="txtGameLog">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
@@ -77,8 +77,10 @@
               <focusable value="false"/>
               <font name="Courier New" size="14" style="1"/>
               <foreground color="-1"/>
+              <lineWrap value="true"/>
               <opaque value="true"/>
               <text value=""/>
+              <wrapStyleWord value="true"/>
             </properties>
           </component>
         </children>
