--- a/src/GUIs/GameWindow.form
+++ b/src/GUIs/GameWindow.form
@@ -57,8 +57,7 @@
           </component>
         </children>
       </grid>
-      <grid id="81aca" binding="pnlGameLog" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="81aca" binding="pnlGameLog" layout-manager="GridBagLayout">
         <constraints>
           <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true">
             <preferred-size width="400" height="804"/>
@@ -74,6 +73,7 @@
           <maximumSize width="364" height="804"/>
           <minimumSize width="364" height="804"/>
           <opaque value="false"/>
+          <preferredSize width="364" height="804"/>
         </properties>
         <border type="none"/>
         <children>
@@ -84,6 +84,7 @@
                 <preferred-size width="360" height="800"/>
                 <maximum-size width="360" height="800"/>
               </grid>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
               <autoscrolls value="true"/>
@@ -94,15 +95,17 @@
               <font name="Courier New" size="14" style="1"/>
               <foreground color="-1"/>
               <lineWrap value="true"/>
+              <maximumSize width="364" height="804"/>
+              <minimumSize width="360" height="17"/>
               <opaque value="true"/>
+              <preferredSize width="364" height="804"/>
               <text value=""/>
               <wrapStyleWord value="true"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="dd5d3" binding="pnlGame" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="dd5d3" binding="pnlGame" layout-manager="GridBagLayout">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true">
             <preferred-size width="-1" height="360"/>
@@ -130,6 +133,7 @@
                 <preferred-size width="420" height="100"/>
                 <maximum-size width="420" height="100"/>
               </grid>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
               <background color="-11382962"/>
@@ -224,6 +228,7 @@
                 <preferred-size width="-1" height="50"/>
                 <maximum-size width="-1" height="50"/>
               </grid>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
               <background color="-11382962"/>
@@ -313,6 +318,7 @@
                 <preferred-size width="260" height="260"/>
                 <maximum-size width="260" height="260"/>
               </grid>
+              <gridbag weightx="1.0" weighty="1.0"/>
             </constraints>
             <properties>
               <background color="-11382962"/>
