--- a/src/GUIs/OptionsMenu.form
+++ b/src/GUIs/OptionsMenu.form
@@ -25,7 +25,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Monospaced" size="16" style="1"/>
+              <font/>
               <foreground color="-1"/>
               <text value="Difficulty"/>
             </properties>
@@ -35,7 +35,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Monospaced" size="12" style="1"/>
+              <font/>
               <foreground color="-1"/>
               <name value=""/>
               <opaque value="false"/>
@@ -47,7 +47,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Monospaced" size="12" style="1"/>
+              <font/>
               <foreground color="-1"/>
               <opaque value="false"/>
               <text value="Normal"/>
@@ -58,7 +58,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <font name="Monospaced" size="12" style="1"/>
+              <font/>
               <foreground color="-1"/>
               <opaque value="false"/>
               <text value="Hard"/>
